Fix button text not centered on mobile

--- a/style.css
+++ b/style.css
@@ -107,5 +107,6 @@ canvas {
 @media only screen and (max-width: 480px) {
   #mouse-input button {
     display: flex;
+    padding-top: 20px;
   }
 }
